Fix cfp editor layout on smaller screens

--- a/src/pretalx/static/orga/css/ui/cfp-editor.css
+++ b/src/pretalx/static/orga/css/ui/cfp-editor.css
@@ -21,11 +21,16 @@
 .cfp-preview-top-bg {
     background-color: var(--color-primary);
     height: 120px;
+    overflow-y: hidden;
+    img {
+        object-fit: cover;
+        width: 100%;
+    }
 }
 
 .cfp-preview-header {
     padding: 0.75rem 1.5rem;
-    margin-top: -53px;
+    margin-top: -80px;
     position: relative;
     z-index: 1;
     .cfp-preview-header-image {
@@ -291,5 +296,6 @@ dl dt {
     }
     .cfp-editor-sidebar {
         order: -1;
+        z-index: 900;
     }
 }
